[package]
name = "nexus_vault"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
odra = { version = "=2.7.0", default-features = false }
odra-modules = { version = "=2.7.0", default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
odra-build = { version = "=2.7.0", default-features = false }
odra-cli = { version = "=2.7.0", default-features = false }
odra-core = { version = "=2.7.0", default-features = false }
odra-macros = { version = "=2.7.0" }
odra-schema = { version = "=2.7.0" }

[[bin]]
name = "nexus_vault_build_contract"
path = "bin/build_contract.rs"
test = false

[[bin]]
name = "nexus_vault_build_schema"
path = "bin/build_schema.rs"
test = false

[dev-dependencies]
odra-test = { version = "=2.7.0", default-features = false }

[build-dependencies]
odra-build = { version = "=2.7.0" }
